RESOLVED FIXED281548
Nullptr crash in WebCore::SecurityContext::policyContainer
https://bugs.webkit.org/show_bug.cgi?id=281548
Summary Nullptr crash in WebCore::SecurityContext::policyContainer
p_choudhury
Reported 2024-10-15 19:21:23 PDT
Nullptr crash in WebCore::SecurityContext::policyContainer
Attachments
p_choudhury
Comment 1 2024-10-15 19:21:55 PDT
p_choudhury
Comment 2 2024-10-15 19:35:25 PDT
EWS
Comment 3 2024-10-16 23:37:22 PDT
Committed 285316@main (d49fce1a2c4a): <https://commits.webkit.org/285316@main> Reviewed commits have been landed. Closing PR #35257 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.