Cherry-pick 285316@main (d49fce1a2c4a). https://bugs.webkit.org/show_bug.cgi?id=281548

Nullptr crash in WebCore::SecurityContext::policyContainer
    https://bugs.webkit.org/show_bug.cgi?id=281548
    rdar://137177434

    Reviewed by Sihui Liu and Ryosuke Niwa.

    Added a nullptr check for contentSecurityPolicy() before fetching its policyContainer().

    * LayoutTests/fast/files/filereader-invalid-policy-container-expected.txt: Added.
    * LayoutTests/fast/files/filereader-invalid-policy-container.html: Added.
    * Source/WebCore/fileapi/FileReaderLoader.cpp:
    (WebCore::FileReaderLoader::start):

    Canonical link: https://commits.webkit.org/285316@main

Canonical link: https://commits.webkit.org/282416.219@webkitglib/2.46